--- a/pytest.ini
+++ b/pytest.ini
@@ -1,35 +1,28 @@
-[tool.pytest.ini_options]
-minversion = "7.0"
-addopts = [
-    "-ra",
-    "--strict-markers",
-    "--strict-config",
-    "--cov=auto_mashupper",
-    "--cov-report=term-missing",
-    "--cov-report=xml",
-    "--cov-report=html",
-]
-testpaths = [
-    "tests",
-]
-python_files = [
-    "test_*.py",
-    "*_test.py",
-]
-python_classes = [
-    "Test*",
-]
-python_functions = [
-    "test_*",
-]
-markers = [
-    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
-    "integration: marks tests as integration tests",
-    "dependency: marks tests that require all dependencies to be installed",
-    "unit: marks tests as unit tests",
-]
-filterwarnings = [
-    "ignore::UserWarning",
-    "ignore::DeprecationWarning",
-    "ignore::PendingDeprecationWarning",
-]
+[pytest]
+minversion = 7.0
+addopts = 
+    -ra
+    --strict-markers
+    --strict-config
+    --cov=auto_mashupper
+    --cov-report=term-missing
+    --cov-report=xml
+    --cov-report=html
+testpaths = 
+    tests
+python_files = 
+    test_*.py
+    *_test.py
+python_classes = 
+    Test*
+python_functions = 
+    test_*
+markers = 
+    slow: marks tests as slow (deselect with '-m "not slow"')
+    integration: marks tests as integration tests
+    dependency: marks tests that require all dependencies to be installed
+    unit: marks tests as unit tests
+filterwarnings = 
+    ignore::UserWarning
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
