--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,12 +23,12 @@ classifiers = [
     "Topic :: Multimedia :: Sound/Audio :: Analysis",
 ]
 dependencies = [
+    "setuptools>=80.9.0",
     "cython>=3.1.2",
+    "numpy>=1.19.0,<1.20.0", # Restrict numpy version for madmom compatibility (`AttributeError: module 'numpy' has no attribute 'float'`)
     "madmom>=0.16.1",
-    "numpy>=1.19.0,<1.20.0", # Restrict numpy version for madmom compatibility (AttributeError: module 'numpy' has no attribute 'float')
     "pydub>=0.25.1",
     "pyrubberband>=0.4.0",
-    "setuptools>=80.9.0",
     "soundfile>=0.13.1",
 ]
 
